reimpl datamart as a script